--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
     "@material-ui/core": "^4.9.12",
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "chart.js": "^2.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
