--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "covidapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://anchitjain1234.github.io/covidapp",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -14,13 +15,16 @@
     "react-countup": "^4.3.3",
     "@material-ui/core": "^4.9.12",
     "classnames": "^2.2.6",
-    "chart.js": "^2.9.3"
+    "chart.js": "^2.9.3",
+    "gh-pages": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
